[workspace]
members = [
  "clothoid_bezier",
  "clothoid_curve",
  "clothoid_curve_gui",
  "clothoid_util", "diff_drive", "test_no_std",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# [patch.crates-io]
# clothoid_curve = { path = "clothoid_curve" }
# clothoid_curve_gui = { path = "clothoid_curve_gui" }
