[workspace]
members = [
  "clothoid_bezier",
  "clothoid_curve",
  "clothoid_curve_gui",
  "clothoid_util", "diff_drive", "test_no_std",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uom = { version = "0.37.0", default-features = false, features = ["f32", "f64", "si", "serde"] }

# [patch.crates-io]
# clothoid_curve = { path = "clothoid_curve" }
# clothoid_curve_gui = { path = "clothoid_curve_gui" }
