[package]
name = "clothoid_bezier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clothoid_curve = { path = "../clothoid_curve" }
eval-metrics = "1.0.2"
stroke.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

argmin = "0.10.0"
argmin-math = "0.4.0"
argmin-observer-slog = "0.1.0"
# env_logger = "0.11.2"
finitediff = "0.1.4"

