[package]
name = "clothoid_curve"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lucasw/clothoid_curve_rs"
readme = "../README.md"
license = "BSD-3"

[features]
f64 = []

[dependencies]
argmin = "0.10.0"
argmin-math = "0.4.0"
argmin-observer-slog = "0.1.0"
env_logger = "0.11.2"
finitediff = "0.1.4"
