[package]
name = "clothoid_curve"
version.workspace = true
edition = "2024"
repository = "https://github.com/lucasw/clothoid_curve_rs"
readme = "../README.md"
license = "BSD-3"

[features]
default = ["std"]
std = []

[dependencies]
# TODO(lucasw) only use libm when no using std
libm = "0.2.8"
rustamath_mnmz = "0.1.1"
serde.workspace = true
typenum = "1.19.0"
uom.workspace = true
