[package]
name = "clothoid_curve_gui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lucasw/clothoid_curve_rs"
readme = "../README.md"
license = "BSD-3"

[dependencies]
clothoid_curve = {path="../clothoid_curve"}
clothoid_util = { version = "0.1.0", path = "../clothoid_util" }
eframe = { version = "0.31" }
egui = "0.31"
egui_plot = "0.31"
env_logger = "0.11.2"
