[package]
name = "clothoid_curve_gui"
version.workspace = true
edition = "2021"
repository = "https://github.com/lucasw/clothoid_curve_rs"
readme = "../README.md"
license = "BSD-3"

[dependencies]
anyhow = "1.0.100"
clothoid_bezier = { path = "../clothoid_bezier" }
clothoid_curve = { path = "../clothoid_curve" }
clothoid_util = { path = "../clothoid_util" }
eframe = { version = "0.31" }
egui = "0.31"
egui_plot = "0.31"
env_logger = "0.11.2"
eval-metrics = "1.0.2"
tracing.workspace = true
tracing-subscriber = "0.3.22"
